add version to group and group admin with integration test